<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="elements"
            type="ch.epfl.sweng.favors.profile.EditProfileFragment"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:gravity="top">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            >

            <TextView
                android:id="@+id/editProfileTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="Edit profile"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/profile_fragment_database_object_size"
                    />
                <EditText
                    android:id="@+id/profFirstNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{elements.firstName}"
                    android:textSize="@dimen/profile_fragment_database_content_size"
                    android:paddingBottom="@dimen/profil_fragment_bottom_padding"
                    android:singleLine="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/profile_fragment_database_object_size"
                    />
                <EditText
                    android:id="@+id/profLastNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{elements.lastName}"
                    android:textSize="@dimen/profile_fragment_database_content_size"
                    android:paddingBottom="@dimen/profil_fragment_bottom_padding"
                    android:singleLine="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textStyle="bold"
                    android:textSize="@dimen/profile_fragment_database_object_size"
                    />
                <EditText
                    android:id="@+id/profCityEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{elements.baseCity}"
                    android:textSize="@dimen/profile_fragment_database_content_size"
                    android:paddingBottom="@dimen/profil_fragment_bottom_padding"
                    android:singleLine="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textStyle="bold"
                    android:textSize="@dimen/profile_fragment_database_object_size"
                    />
                <!--
                <EditText
                    android:id="@+id/prof_gender_editdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{elements.sex}"
                    android:textSize="@dimen/profile_fragment_database_content_size"
                    android:singleLine="true"/>
                -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioGroup
                        android:id="@+id/prof_gender_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <RadioButton
                            android:id="@+id/profGenderMEdit"
                            android:padding="10sp"
                            android:layout_margin="10sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="M"
                            android:gravity="right"
                            />
                        <RadioButton
                            android:id="@+id/profGenderFEdit"
                            android:padding="10sp"
                            android:layout_margin="10sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="F"
                            android:gravity="left"/>
                    </RadioGroup>
                </LinearLayout>


                <Button
                    android:layout_marginTop="20sp"
                    android:id="@+id/commitChanges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Update" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>