<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="java.lang.Long"/>
        <import type="android.view.View"/>
        <variable
            name="elements"
            type="ch.epfl.sweng.favors.profile.ProfileFragment"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:gravity="top">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:paddingTop="12dp"
                android:text="@{elements.profileName}"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="Name's Profile" />

            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="10sp"
                android:text="@string/edit_profile"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

        <TextView
            android:id="@+id/profEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/profil_fragment_bottom_padding"
            android:text="@{elements.email}"
            android:textSize="14sp"
            tools:text="E-Mail address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/profCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{elements.baseCity}"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:text="@string/tokens"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profTokens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{Long.toString(elements.tokens)}"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameFavors"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/delete"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/deleteButton"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/reauthenticateMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordConfirmation"
            android:visibility="invisible"
            android:textAlignment="center"
            android:textSize="14sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordEntry"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.38"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/checkPasswordImage"
                android:layout_width="29dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/check_image"
                app:layout_constraintBottom_toBottomOf="@id/passwordEntry"
                app:layout_constraintStart_toEndOf="@+id/passwordEntry"
                app:layout_constraintTop_toTopOf="@id/passwordEntry"
                android:visibility="@{elements.isPasswordCorrect ? View.VISIBLE : View.GONE}"
                tools:layout_editor_absoluteY="106dp" />
        </LinearLayout>


        <Button
            android:id="@+id/confirmDeletion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="@{elements.isPasswordCorrect}"
            android:text="@string/confirmDeletionText"
            android:textSize="14sp"
            android:visibility="invisible" />

    </LinearLayout>

</layout>